{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 413,
  "lineage": "f361037f-0083-47c3-c3fa-6dfaa30f3e35",
  "resources": [
    {
      "module": "module.instance_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f6a11788f8e319e",
            "arn": "arn:aws:ec2:ap-southeast-1:655612526828:instance/i-037326abcf36f4bef",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-037326abcf36f4bef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0be560473b1d4676e",
            "private_dns": "ip-172-16-1-123.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.123",
            "public_ip": "13.228.145.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-064cb8b8e62c2c4f6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dea74736e1794a58",
            "tags": {
              "Name": "ubt01"
            },
            "tags_all": {
              "Name": "ubt01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f484e0b80dc2cc75"
            ]
          },
          "dependencies": [
            "module.networking_module.aws_security_group.sg01",
            "module.networking_module.aws_subnet.subnet01",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.instance_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f6a11788f8e319e",
            "arn": "arn:aws:ec2:ap-southeast-1:655612526828:instance/i-0bb46e7aa05f24828",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bb46e7aa05f24828",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a0ffa3d1a76dd312",
            "private_dns": "ip-172-16-2-124.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.2.124",
            "public_ip": "13.251.99.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c0bda6def4dcbaeb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-085230660de504ae8",
            "tags": {
              "Name": "ubt02"
            },
            "tags_all": {
              "Name": "ubt02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f484e0b80dc2cc75"
            ]
          },
          "dependencies": [
            "module.networking_module.aws_security_group.sg01",
            "module.networking_module.aws_subnet.subnet02",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:655612526828:loadbalancer/app/loadbalaner01/29c263d55dcb8e87",
            "arn_suffix": "app/loadbalaner01/29c263d55dcb8e87",
            "desync_mitigation_mode": "defensive",
            "dns_name": "loadbalaner01-897338282.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:655612526828:loadbalancer/app/loadbalaner01/29c263d55dcb8e87",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "loadbalaner01",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f484e0b80dc2cc75"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-085230660de504ae8"
              },
              {
                "subnet_id": "subnet-0dea74736e1794a58"
              }
            ],
            "subnets": [
              "subnet-085230660de504ae8",
              "subnet-0dea74736e1794a58"
            ],
            "tags": {
              "Name": "lb01"
            },
            "tags_all": {
              "Name": "lb01"
            },
            "vpc_id": "vpc-034bf17347e01bfaa",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.networking_module.aws_security_group.sg01",
            "module.networking_module.aws_subnet.subnet01",
            "module.networking_module.aws_subnet.subnet02",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ltn01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:655612526828:listener/app/loadbalaner01/29c263d55dcb8e87/7a43a33c3e658cb0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:655612526828:targetgroup/target01/45ddda7efc7eeda8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:655612526828:listener/app/loadbalaner01/29c263d55dcb8e87/7a43a33c3e658cb0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:655612526828:loadbalancer/app/loadbalaner01/29c263d55dcb8e87",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_module.aws_lb.lb01",
            "module.loadbalancer_module.aws_lb_target_group.tg01",
            "module.networking_module.aws_security_group.sg01",
            "module.networking_module.aws_subnet.subnet01",
            "module.networking_module.aws_subnet.subnet02",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:655612526828:targetgroup/target01/45ddda7efc7eeda8",
            "arn_suffix": "targetgroup/target01/45ddda7efc7eeda8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:655612526828:targetgroup/target01/45ddda7efc7eeda8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target01",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-034bf17347e01bfaa"
          },
          "dependencies": [
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attch01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:655612526828:targetgroup/target01/45ddda7efc7eeda8-20230309091554024400000004",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:655612526828:targetgroup/target01/45ddda7efc7eeda8",
            "target_id": "i-037326abcf36f4bef"
          },
          "dependencies": [
            "module.instance_module.aws_instance.instance01",
            "module.loadbalancer_module.aws_lb_target_group.tg01",
            "module.networking_module.aws_security_group.sg01",
            "module.networking_module.aws_subnet.subnet01",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attch02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:655612526828:targetgroup/target01/45ddda7efc7eeda8-20230309091553816400000003",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:655612526828:targetgroup/target01/45ddda7efc7eeda8",
            "target_id": "i-0bb46e7aa05f24828"
          },
          "dependencies": [
            "module.instance_module.aws_instance.instance02",
            "module.loadbalancer_module.aws_lb_target_group.tg01",
            "module.networking_module.aws_security_group.sg01",
            "module.networking_module.aws_subnet.subnet02",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e031e48fc6a32a1f",
            "associate_with_private_ip": "172.16.1.123",
            "association_id": "eipassoc-0e38c83d7446e1df6",
            "domain": "vpc",
            "id": "eipalloc-0e031e48fc6a32a1f",
            "instance": "i-037326abcf36f4bef",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0be560473b1d4676e",
            "private_dns": "ip-172-16-1-123.ap-southeast-1.compute.internal",
            "private_ip": "172.16.1.123",
            "public_dns": "ec2-13-228-145-207.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.228.145.207",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.instance_module.aws_instance.instance01",
            "module.networking_module.aws_internet_gateway.gw01",
            "module.networking_module.aws_security_group.sg01",
            "module.networking_module.aws_subnet.subnet01",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ff3802846535931",
            "associate_with_private_ip": "172.16.2.124",
            "association_id": "eipassoc-0b650ca7909496256",
            "domain": "vpc",
            "id": "eipalloc-04ff3802846535931",
            "instance": "i-0bb46e7aa05f24828",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0a0ffa3d1a76dd312",
            "private_dns": "ip-172-16-2-124.ap-southeast-1.compute.internal",
            "private_ip": "172.16.2.124",
            "public_dns": "ec2-13-251-99-137.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.251.99.137",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.instance_module.aws_instance.instance02",
            "module.networking_module.aws_internet_gateway.gw01",
            "module.networking_module.aws_security_group.sg01",
            "module.networking_module.aws_subnet.subnet02",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:655612526828:internet-gateway/igw-0c4ef3acdd554e42c",
            "id": "igw-0c4ef3acdd554e42c",
            "owner_id": "655612526828",
            "tags": {
              "Name": "aws-gw01"
            },
            "tags_all": {
              "Name": "aws-gw01"
            },
            "vpc_id": "vpc-034bf17347e01bfaa"
          },
          "dependencies": [
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtable01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:655612526828:route-table/rtb-0d3db0399c40f83c3",
            "id": "rtb-0d3db0399c40f83c3",
            "owner_id": "655612526828",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c4ef3acdd554e42c",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c4ef3acdd554e42c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws_rtable01"
            },
            "tags_all": {
              "Name": "aws_rtable01"
            },
            "timeouts": null,
            "vpc_id": "vpc-034bf17347e01bfaa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_module.aws_internet_gateway.gw01",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d736037fd02915f",
            "route_table_id": "rtb-0d3db0399c40f83c3",
            "subnet_id": "subnet-0dea74736e1794a58"
          },
          "dependencies": [
            "module.networking_module.aws_internet_gateway.gw01",
            "module.networking_module.aws_route_table.rtable01",
            "module.networking_module.aws_subnet.subnet01",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091584ac387fd2dfc",
            "route_table_id": "rtb-0d3db0399c40f83c3",
            "subnet_id": "subnet-085230660de504ae8"
          },
          "dependencies": [
            "module.networking_module.aws_internet_gateway.gw01",
            "module.networking_module.aws_route_table.rtable01",
            "module.networking_module.aws_subnet.subnet02",
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:655612526828:security-group/sg-0f484e0b80dc2cc75",
            "description": "Allow web-traffice inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f484e0b80dc2cc75",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from world",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from world",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https from world",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from world",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web-traffic",
            "name_prefix": "",
            "owner_id": "655612526828",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web-traffic"
            },
            "tags_all": {
              "Name": "allow_web-traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-034bf17347e01bfaa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:655612526828:subnet/subnet-0dea74736e1794a58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dea74736e1794a58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655612526828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws_subnet01"
            },
            "tags_all": {
              "Name": "aws_subnet01"
            },
            "vpc_id": "vpc-034bf17347e01bfaa"
          },
          "dependencies": [
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:655612526828:subnet/subnet-085230660de504ae8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085230660de504ae8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655612526828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws_subnet02"
            },
            "tags_all": {
              "Name": "aws_subnet02"
            },
            "vpc_id": "vpc-034bf17347e01bfaa"
          },
          "dependencies": [
            "module.networking_module.aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:655612526828:vpc/vpc-034bf17347e01bfaa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0f70a6230cb3fb022",
            "default_route_table_id": "rtb-04f5009e1f4943ac6",
            "default_security_group_id": "sg-0ae1db881a35a7adc",
            "dhcp_options_id": "dopt-06a2a22973a05d284",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-034bf17347e01bfaa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04f5009e1f4943ac6",
            "owner_id": "655612526828",
            "tags": {
              "Name": "aws_vpc01"
            },
            "tags_all": {
              "Name": "aws_vpc01"
            }
          }
        }
      ]
    }
  ]
}